--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <title>Ztoo Analytics</title>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  <meta name="description" content="Ztoo Analytics - Analytics Made Easy" />
+  <meta name="keywords"
+    content="Analytics, Start-up, Markting Analytics, Restaurant Analytics,iot, e-commerce,Silicon Valley" />
+  <meta name="author" content="Anandhu, Raj" />
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  <link rel="shortcut icon" href="images/favicon.ico">
+
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css">
+
+  <!-- Magnificpopup Css -->
+  <link rel="stylesheet" type="text/css" href="assets/css/magnific-popup.css">
+
+  <!--Material Icon -->
+  <link rel="stylesheet" type="text/css" href="assets/css/materialdesignicons.min.css" />
+
+  <!--Unicons Icon -->
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
+
+  <!--Font Awesome -->
+  <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css" />
+
+  <!--Slider-->
+  <link rel="stylesheet" href="assets/css/owl.carousel.css" />
+  <link rel="stylesheet" href="assets/css/owl.theme.css" />
+  <link rel="stylesheet" href="assets/css/owl.transitions.css" />
+
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+
+  <!-- JAVASCRIPTS -->
+  <script src="assets/js/jquery.min.js"></script>
+  <!-- SCROLL -->
+  <script src="assets/js/scrollspy.min.js"></script>
+  <!-- bootstrap -->
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <!-- easing -->
+  <script src="assets/js/jquery.easing.min.js"></script>
+  <!-- Portfolio -->
+  <script src="assets/js/jquery.magnific-popup.min.js"></script>
+  <script src="assets/js/isotope.js"></script>
+  <!-- Owl Carousel -->
+  <script src="assets/js/owl.carousel.min.js"></script>
+  <!-- Custom -->
+  <script src="assets/js/app.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+  </script>
+  <script type="text/javascript">
+    (function () {
+      emailjs.init("KKZOtl3ghYad2H7Mq");
+    })();
+  </script>
+  <script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script>
+</body>
+
 </html>
