--- a/public/index.html
+++ b/public/index.html
@@ -60,14 +60,14 @@
   <script src="assets/js/owl.carousel.min.js"></script>
   <!-- Custom -->
   <script src="assets/js/app.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
-  </script>
-  <script type="text/javascript">
+  <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"> -->
+  <!-- </script> -->
+  <!-- <script type="text/javascript">
     (function () {
       emailjs.init("KKZOtl3ghYad2H7Mq");
     })();
-  </script>
-  <script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script>
+  </script> -->
+  <!-- <script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script> -->
 </body>
 
 </html>
