--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <meta name="author" content="Anandhu, Raj" />
 
   <link rel="shortcut icon" href="images/favicon.ico">
-
+  
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 
@@ -38,7 +38,15 @@
   <link rel="stylesheet" href="assets/css/owl.carousel.css" />
   <link rel="stylesheet" href="assets/css/owl.theme.css" />
   <link rel="stylesheet" href="assets/css/owl.transitions.css" />
+  <!-- Google tag (gtag.js) -->
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-HH7R5DDJ0C"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'G-HH7R5DDJ0C');
+  </script> -->
 </head>
 
 <body>
@@ -54,7 +62,7 @@
   <!-- easing -->
   <script src="assets/js/jquery.easing.min.js"></script>
   <!-- Portfolio -->
-  <script src="assets/js/jquery.magnific-popup.min.js"></script>    
+  <script src="assets/js/jquery.magnific-popup.min.js"></script>
   <script src="assets/js/isotope.js"></script>
   <!-- Owl Carousel -->
   <script src="assets/js/owl.carousel.min.js"></script>
