--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
   <title>Ztoo Analytics</title>
 
   <meta name="description" content="Ztoo Analytics - Analytics Made Easy" />
@@ -20,24 +19,22 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 
   <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css">
+  <link rel="stylesheet" href="https://storage.googleapis.com/ztoo-assets/assets/css/bootstrap.min.css" type="text/css">
 
   <!-- Magnificpopup Css -->
-  <link rel="stylesheet" type="text/css" href="assets/css/magnific-popup.css">
+  <link rel="stylesheet" type="text/css" href="https://storage.googleapis.com/ztoo-assets/assets/css/magnific-popup.css">
 
   <!--Material Icon -->
-  <link rel="stylesheet" type="text/css" href="assets/css/materialdesignicons.min.css" />
+  <link rel="stylesheet" type="text/css" href="/assets/css/materialdesignicons.min.css" />
 
   <!--Unicons Icon -->
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
 
   <!--Font Awesome -->
-  <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css" />
+  <link rel="stylesheet" type="text/css" href="https://storage.googleapis.com/ztoo-assets/assets/css/font-awesome.min.css" />
 
   <!--Slider-->
-  <link rel="stylesheet" href="assets/css/owl.carousel.css" />
-  <link rel="stylesheet" href="assets/css/owl.theme.css" />
-  <link rel="stylesheet" href="assets/css/owl.transitions.css" />
+  <link rel="stylesheet" href="https://storage.googleapis.com/ztoo-assets/assets/css/owl.theme.css" />
 
 </head>
 
@@ -46,20 +43,20 @@
   <div id="root"></div>
 
   <!-- JAVASCRIPTS -->
-  <script src="assets/js/jquery.min.js"></script>
+  <script src="https://storage.googleapis.com/ztoo-assets/assets/js/jquery.min.js"></script>
   <!-- SCROLL -->
-  <script src="assets/js/scrollspy.min.js"></script>
+  <script src="https://storage.googleapis.com/ztoo-assets/assets/js/scrollspy.min.js"></script>
   <!-- bootstrap -->
-  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <script src="https://storage.googleapis.com/ztoo-assets/assets/js/bootstrap.bundle.min.js"></script>
   <!-- easing -->
-  <script src="assets/js/jquery.easing.min.js"></script>
+  <script src="https://storage.googleapis.com/ztoo-assets/assets/js/jquery.easing.min.js"></script>
   <!-- Portfolio -->
-  <script src="assets/js/jquery.magnific-popup.min.js"></script>
-  <script src="assets/js/isotope.js"></script>
+  <script src="https://storage.googleapis.com/ztoo-assets/assets/js/jquery.magnific-popup.min.js"></script>
+  <script src="https://storage.googleapis.com/ztoo-assets/assets/js/isotope.js"></script>
   <!-- Owl Carousel -->
-  <script src="assets/js/owl.carousel.min.js"></script>
+  <script src="https://storage.googleapis.com/ztoo-assets/assets/js/owl.carousel.min.js"></script>
   <!-- Custom -->
-  <script src="assets/js/app.js"></script>
+  <script src="https://storage.googleapis.com/ztoo-assets/assets/js/app.js"></script>
  
 </body>
 
